add non local module to normal vs abnormal prediction

--- a/experiments/predict_MACE.ipynb
+++ b/experiments/predict_MACE.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "[85 rows x 6 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,12 @@
     "    X_train, X_test, y_train_tmp, y_test_tmp = train_test_split(X_df, y_df['label_'+str(n_year+1)], random_state=42)\n",
     "    \n",
     "    y_train.append(y_train_tmp)\n",
-    "    y_test.append(y_test_tmp)"
+    "    y_test.append(y_test_tmp)\n",
+    "    \n",
+    "# do normalize\n",
+    "normalizer = sklearn.preprocessing.Normalizer().fit(X_train)\n",
+    "X_train = normalizer.transform(X_train)\n",
+    "X_test = normalizer.transform(X_test)"
    ]
   },
   {
@@ -785,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,35 +808,40 @@
     "    print('\\ttraining loss:')\n",
     "    for n_year in range(4):\n",
     "        print('\\t[{} - {}) year: {:.4f}'.format(n_year, n_year+1, train_losses[n_year]))\n",
+    "    print('\\toverall: {:.4f}'.format(sum(train_losses)/4))\n",
     "        \n",
     "    print('\\ttesting loss:')\n",
     "    for n_year in range(4):\n",
     "        print('\\t[{} - {}) year: {:.4f}'.format(n_year, n_year+1, test_losses[n_year]))\n",
+    "    print('\\toverall: {:.4f}'.format(sum(test_losses)/4))\n",
+    "    \n",
     "    return train_losses, test_losses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import tree, ensemble, linear_model, svm\n",
+    "from sklearn import tree, ensemble, linear_model, svm, naive_bayes, neighbors\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "import copy\n",
     "\n",
     "models = [\n",
-    "    ['dtr', tree.DecisionTreeClassifier()],\n",
-    "    ['rf', ensemble.RandomForestClassifier()],\n",
-    "    ['adab', ensemble.AdaBoostClassifier()],\n",
+    "    ['dtr', tree.DecisionTreeRegressor()],\n",
+    "    ['rfr', ensemble.RandomForestRegressor()],\n",
+    "    ['adabr', ensemble.AdaBoostRegressor()],\n",
     "    ['lgr', linear_model.LogisticRegression()],\n",
-    "    ['svm_lc', svm.LinearSVC()]\n",
+    "    ['gnb', naive_bayes.GaussianNB()],\n",
+    "    ['knn', neighbors.KNeighborsRegressor()],\n",
+    "    ['svm_lr', svm.LinearSVR()]\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -844,22 +854,26 @@
       "\t[1 - 2) year: 0.0000\n",
       "\t[2 - 3) year: 0.0000\n",
       "\t[3 - 4) year: 0.0000\n",
+      "\toverall: 0.0000\n",
       "\ttesting loss:\n",
-      "\t[0 - 1) year: 0.5161\n",
-      "\t[1 - 2) year: 0.4032\n",
-      "\t[2 - 3) year: 0.5323\n",
+      "\t[0 - 1) year: 0.5645\n",
+      "\t[1 - 2) year: 0.4516\n",
+      "\t[2 - 3) year: 0.4677\n",
       "\t[3 - 4) year: 0.5161\n",
-      "rf result:\n",
+      "\toverall: 0.5000\n",
+      "rfr result:\n",
       "\ttraining loss:\n",
-      "\t[0 - 1) year: 0.0108\n",
-      "\t[1 - 2) year: 0.0000\n",
-      "\t[2 - 3) year: 0.0216\n",
-      "\t[3 - 4) year: 0.0432\n",
+      "\t[0 - 1) year: 0.1730\n",
+      "\t[1 - 2) year: 0.1681\n",
+      "\t[2 - 3) year: 0.1665\n",
+      "\t[3 - 4) year: 0.1541\n",
+      "\toverall: 0.1654\n",
       "\ttesting loss:\n",
-      "\t[0 - 1) year: 0.4194\n",
-      "\t[1 - 2) year: 0.3871\n",
-      "\t[2 - 3) year: 0.3226\n",
-      "\t[3 - 4) year: 0.3871\n"
+      "\t[0 - 1) year: 0.5081\n",
+      "\t[1 - 2) year: 0.4645\n",
+      "\t[2 - 3) year: 0.4581\n",
+      "\t[3 - 4) year: 0.4613\n",
+      "\toverall: 0.4730\n"
      ]
     },
     {
@@ -880,73 +894,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "adab result:\n",
+      "adabr result:\n",
       "\ttraining loss:\n",
-      "\t[0 - 1) year: 0.0000\n",
-      "\t[1 - 2) year: 0.0000\n",
-      "\t[2 - 3) year: 0.0000\n",
-      "\t[3 - 4) year: 0.0000\n",
+      "\t[0 - 1) year: 0.2641\n",
+      "\t[1 - 2) year: 0.2353\n",
+      "\t[2 - 3) year: 0.2748\n",
+      "\t[3 - 4) year: 0.2415\n",
+      "\toverall: 0.2539\n",
       "\ttesting loss:\n",
-      "\t[0 - 1) year: 0.4355\n",
-      "\t[1 - 2) year: 0.5000\n",
-      "\t[2 - 3) year: 0.5484\n",
-      "\t[3 - 4) year: 0.5161\n",
+      "\t[0 - 1) year: 0.4866\n",
+      "\t[1 - 2) year: 0.5112\n",
+      "\t[2 - 3) year: 0.4939\n",
+      "\t[3 - 4) year: 0.4742\n",
+      "\toverall: 0.4915\n",
       "lgr result:\n",
       "\ttraining loss:\n",
-      "\t[0 - 1) year: 0.1622\n",
-      "\t[1 - 2) year: 0.1622\n",
-      "\t[2 - 3) year: 0.1838\n",
-      "\t[3 - 4) year: 0.1676\n",
+      "\t[0 - 1) year: 0.3730\n",
+      "\t[1 - 2) year: 0.4162\n",
+      "\t[2 - 3) year: 0.4162\n",
+      "\t[3 - 4) year: 0.3784\n",
+      "\toverall: 0.3959\n",
       "\ttesting loss:\n",
       "\t[0 - 1) year: 0.4355\n",
-      "\t[1 - 2) year: 0.4355\n",
-      "\t[2 - 3) year: 0.4032\n",
-      "\t[3 - 4) year: 0.4355\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/svm/base.py:931: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/svm/base.py:931: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
-      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/svm/base.py:931: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "svm_lc result:\n",
+      "\t[1 - 2) year: 0.3387\n",
+      "\t[2 - 3) year: 0.3548\n",
+      "\t[3 - 4) year: 0.3065\n",
+      "\toverall: 0.3589\n",
+      "gnb result:\n",
       "\ttraining loss:\n",
-      "\t[0 - 1) year: 0.4162\n",
-      "\t[1 - 2) year: 0.4108\n",
-      "\t[2 - 3) year: 0.3676\n",
-      "\t[3 - 4) year: 0.3351\n",
+      "\t[0 - 1) year: 0.4973\n",
+      "\t[1 - 2) year: 0.4000\n",
+      "\t[2 - 3) year: 0.4000\n",
+      "\t[3 - 4) year: 0.3622\n",
+      "\toverall: 0.4149\n",
       "\ttesting loss:\n",
       "\t[0 - 1) year: 0.4839\n",
-      "\t[1 - 2) year: 0.4516\n",
-      "\t[2 - 3) year: 0.4032\n",
-      "\t[3 - 4) year: 0.3065\n"
+      "\t[1 - 2) year: 0.4032\n",
+      "\t[2 - 3) year: 0.3710\n",
+      "\t[3 - 4) year: 0.3226\n",
+      "\toverall: 0.3952\n",
+      "knn result:\n",
+      "\ttraining loss:\n",
+      "\t[0 - 1) year: 0.3459\n",
+      "\t[1 - 2) year: 0.3795\n",
+      "\t[2 - 3) year: 0.3795\n",
+      "\t[3 - 4) year: 0.3611\n",
+      "\toverall: 0.3665\n",
+      "\ttesting loss:\n",
+      "\t[0 - 1) year: 0.4871\n",
+      "\t[1 - 2) year: 0.5000\n",
+      "\t[2 - 3) year: 0.4742\n",
+      "\t[3 - 4) year: 0.4355\n",
+      "\toverall: 0.4742\n",
+      "svm_lr result:\n",
+      "\ttraining loss:\n",
+      "\t[0 - 1) year: 0.3796\n",
+      "\t[1 - 2) year: 0.4419\n",
+      "\t[2 - 3) year: 0.4196\n",
+      "\t[3 - 4) year: 0.3780\n",
+      "\toverall: 0.4048\n",
+      "\ttesting loss:\n",
+      "\t[0 - 1) year: 0.4493\n",
+      "\t[1 - 2) year: 0.4297\n",
+      "\t[2 - 3) year: 0.3642\n",
+      "\t[3 - 4) year: 0.3131\n",
+      "\toverall: 0.3891\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/svm/base.py:931: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n",
+      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
       "/home/toosyou/.local/lib/python3.6/site-packages/sklearn/svm/base.py:931: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
       "  \"the number of iterations.\", ConvergenceWarning)\n"
      ]
