search ekg/hs_nfilters for ekg/hs branches, update results

--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os, sys\n",
+    "\n",
+    "sys.path.append('./hazard_prediction/')\n",
+    "from dataloader import HazardAudicor10sLoader\n",
+    "from dataloader import HazardBigExamLoader\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -42,6 +46,80 @@
     "    plt.xlabel('Event Times (days)')\n",
     "    plt.ylabel('# of Signals')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Big Exam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HazardBigExamConfig():\n",
+    "    def __init__(self):\n",
+    "        self.big_exam_ekg_channels = [0, 1, 2, 3, 4, 5, 6, 7]\n",
+    "        self.big_exam_hs_channels = [8, 9]\n",
+    "        self.big_exam_only_train = False\n",
+    "        self.n_ekg_channels = 8\n",
+    "        self.n_hs_channels = 2\n",
+    "        self.sampling_rate = 1000\n",
+    "        self.downsample = 'direct'\n",
+    "        self.events = ['ADHF', 'Mortality', 'MI', 'Stroke', 'CVD']\n",
+    "\n",
+    "loader = HazardBigExamLoader(HazardBigExamConfig())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of normal subjects: 601\n",
+      "Number of normal subjects: 601\n",
+      "Number of abnormal subjects: 226\n",
+      "Number of abnormal signals: 795\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of normal subjects:', np.unique(loader.load_subject_id(is_normal=True)).shape[0])\n",
+    "print('Number of normal subjects:', loader.load_normal_X().shape[0])\n",
+    "\n",
+    "print('Number of abnormal subjects:', np.unique(loader.load_subject_id(is_normal=False)).shape[0])\n",
+    "print('Number of abnormal signals:', loader.load_abnormal_X().shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "longest event time: 2048 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "longest_event_time = 0\n",
+    "y = loader.load_abnormal_y()\n",
+    "\n",
+    "for i in range(5):\n",
+    "    longest_event_time = max(longest_event_time, \n",
+    "                            y[y[:, i, 0] == 1, i, 1].max())\n",
+    "print('longest event time: {} days'.format(longest_event_time.astype(int)))"
    ]
   },
   {
@@ -97,26 +175,6 @@
    "source": [
     "abnormal_subject_ids = np.vectorize(lambda s: (s.split('/')[-1]).split('_')[0])(abnormal_filenames)\n",
     "print('Number of abnormal subjects:', np.unique(abnormal_subject_ids).shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: better_exceptions will only inspect code from the command line\n",
-      "         when using: `python -m better_exceptions'. Otherwise, only code\n",
-      "         loaded from files will be inspected!\n"
-     ]
-    }
-   ],
-   "source": [
-    "sys.path.append('./hazard_prediction/')\n",
-    "from dataloader import HazardAudicor10sLoader"
    ]
   },
   {
