--- a/notebooks/data_visualization.ipynb
+++ b/notebooks/data_visualization.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
    "source": [
     "import os, sys\n",
     "\n",
-    "sys.path.append('./hazard_prediction/')\n",
+    "sys.path.append('../hazard_prediction/')\n",
     "from dataloader import HazardAudicor10sLoader\n",
     "from dataloader import HazardBigExamLoader\n",
     "\n",
@@ -504,6 +504,13 @@
     "ax.set_title('BMI histogram')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
